turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:10: error: not found: value MVT_SUIVANT
	if (rule(state)(I)(MVT_SUIVANT)==8) {
                           ^Turmite:17: error: not found: value MVT_SUIVANT
	else if (rule(state)(I)(MVT_SUIVANT)==0) {
                                ^Turmite:22: error: not found: value MVT_SUIVANT
	else if (rule(state)(I)(MVT_SUIVANT)==1) {
                                ^Turmite:28: error: not found: value MVT_SUIVANT
	else if (rule(state)(I)(MVT_SUIVANT)==4) {
                                ^Turmite:36: error: not found: value MVT_SUIVANT
	else if (rule(state)(I)(MVT_SUIVANT)==2) {
                                ^